src/styles/app.css
:root {
  color-scheme: light dark;
  background-color: #ffffff;
  --layer-dialog: 100;
  --layer-warning: 200;
  --primary-color: #16171d;
  --min-aspect-ratio: 16/12;
}

body {
  margin: 0;
  padding: 0;
  min-height: 100svh;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-x: hidden;
  font-family: 'Roboto', sans-serif;
  background-color: var(--primary-color);
}


@media (min-aspect-ratio: var(--min-aspect-ratio)) {
  body {
    user-select: none;
    pointer-events: none;
    cursor: not-allowed;
  }
}

